Fix content overflow when show more button is clicked on individual articles

--- a/src/article/Article.module.css
+++ b/src/article/Article.module.css
@@ -52,8 +52,8 @@
 }
 
 .bigView {
-    border-right: 1px solid #8f4145;
-    min-width: 100vw;
+    /* border-right: 1px solid #8f4145; */
+    max-width: fit-content;
     /* min-height: 70vh; */
     padding: 2rem;
 }
